# TexWeaver

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  setup.py
examples/: custom_template_example.yaml
src/texweaver/: __init__.py  entrypoint.py  markdown.py  tex_config.py  tex_parser.py
src/texweaver/templates/: default.yaml  presentation.yaml
test/: test_parser.py
tests/: __init__.py  test_parser.py  test_texweaver.py
texweaver/: markdown.py  tex_config.py  tex_parser.py
texweaver.egg-info/: PKG-INFO  SOURCES.txt
